--- a/Martify/Views/Settings.xaml
+++ b/Martify/Views/Settings.xaml
@@ -8,7 +8,8 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="864"
-             Style="{StaticResource Page_RadarReveal_Style}">
+             Style="{StaticResource Page_RadarReveal_Style}"
+             d:Style="{x:Null}">
 
     <UserControl.DataContext>
         <vm:SettingsVM />
