--- a/Martify/Views/Employee.xaml
+++ b/Martify/Views/Employee.xaml
@@ -8,7 +8,7 @@
              xmlns:vm="clr-namespace:Martify.ViewModels"
              xmlns:uc="clr-namespace:Martify.Views"
              xmlns:cv="clr-namespace:Martify.Converters" 
-             
+             Background="Transparent"
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="864"
              Style="{StaticResource Page_RadarReveal_Style}"
